--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,18 @@
 }
 
 @media (prefers-color-scheme: light) {
-
- button {
-   color: white;
- }
+  .buttonCompletedTrue {
+    background-color: white;
+  }
+  .buttonCompletedFalse  {
+    background-color: white; 
+  }
+  .header input{
+    background-color: grey;
+  }
+  button {
+    color: white;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -32,14 +40,11 @@
   .list {
     color:black
   }
-  .header input{
-    background-color: gray;
-  }
+
   .buttonCompletedTrue {
     background-color: dimgray;
   }
   .buttonCompletedFalse  {
     background-color: dimgray; 
   }
-
 }
